# ElGringo

./: .dockerignore  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  AI_DEV_TEAM_README.md  CHANGELOG.md  CHATGPT_BRIEFING.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cloud  ENHANCEMENT_PLAN.md  HONEST_ASSESSMENT.md  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  MCP_SETUP_COMPLETE.md  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  README.md  SECURITY.md  UNIQUENESS_SUMMARY.md  VSCODE_MCP_SETUP.md  ai_team.py  api_server.py  ask  chat_ui.py  ci-deploy-elgringo.sh  ci-deploy-fredai.sh  claude_boss.py  claude_bridge.py  cloudbuild.yaml  coding_agent.py  control_center.py  coverage.json  demo.py  deploy-gcp.sh  deploy-vm.sh  deploy.sh  (+22 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
ChatterFixApp/: README.md
ChatterFixApp/ChatterFix.xcodeproj/: project.pbxproj
ai_dev_team/: __init__.py  app_generator.py  benchmark.py  bridge.py  chat_ui.py  cli.py  command_center.py  dashboard_ui.py  dev_consultant.py  fredfix.py  launcher.py  ollama_knowledge.py  orchestrator.py  parallel_coding.py  personas.py  project_context.py  sessions.py  shared_config.py  studio_ui.py  workflows.py
ai_dev_team/advanced/: __init__.py  autonomous.py  computer_use.py  debate.py  extended_thinking.py  prompt_cache.py  streaming_collab.py  vision.py  voice.py
ai_dev_team/agents/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py  grok.py  llama_cloud.py  mlx_agent.py  ollama.py  specialists.py
ai_dev_team/app_builder/: __init__.py  components.py  generator.py
ai_dev_team/apple/: __init__.py  apple_shortcuts.py  coreml_agent.py  mlx_inference.py  model_setup.py  smart_router.py  system_integration.py
ai_dev_team/autonomous/: executor.py  file_watcher.py  self_corrector.py  session_learner.py  task_decomposer.py
ai_dev_team/bootstrap/: __init__.py  generator.py
ai_dev_team/business_suite/: __init__.py  chat_builder.py  integrations.py  suite_ui.py
ai_dev_team/collaboration/: __init__.py  engine.py  streaming.py  weighted_consensus.py
ai_dev_team/failover/: circuit_breaker.py  failover_manager.py
ai_dev_team/feedback/: __init__.py  capture.py  feedback_collector.py  trainer.py
ai_dev_team/framework/: __init__.py  chain_of_thought.py  context_manager.py  react_agent.py  tools.py
ai_dev_team/integrations/: __init__.py  chatterfix.py  github.py  github_webhooks.py
ai_dev_team/intelligence/: __init__.py  cmms_schemas.py  code_analyzer.py  code_embeddings.py  code_rag.py  mlx_embeddings.py  semantic_delta.py  universal_ingestor.py
ai_dev_team/knowledge/: __init__.py  auto_learner.py  coding_hub.py  data_manager.py  documentation_loader.py  domains.py  file_watcher.py  firebase_docs.py  project_memory.py  rag_system.py  teaching.py
ai_dev_team/learning/: cross_project.py
ai_dev_team/memory/: __init__.py  learning.py  prevention.py  system.py
ai_dev_team/monitor/: __init__.py  apple_coreml.py  apple_intelligence.py  auto_recovery.py  control_center.py  health_check.py  performance.py  resource_manager.py  system_monitor.py
ai_dev_team/monitoring/: health_monitor.py
ai_dev_team/preferences/: __init__.py  store.py
ai_dev_team/prompts/: template_library.py
ai_dev_team/routing/: __init__.py  benchmark.py  cost_optimizer.py  cost_tracker.py  performance_tracker.py  router.py
ai_dev_team/sandbox/: executor.py
ai_dev_team/streaming/: __init__.py  stream_manager.py
ai_dev_team/tools/: __init__.py  base.py  browser.py  database.py  deploy.py  dev_tools_ui.py  docker.py  export.py  filesystem.py  frontend.py  git.py  infrastructure.py  package.py  quick_deploy.py  scaffolding.py  shell.py  tool_manager.py  ui_agent.py
ai_dev_team/utils/: __init__.py  config.py
ai_dev_team/validation/: __init__.py  firebase_validator.py  python_validator.py  typescript_validator.py
ai_dev_team/workflow/: __init__.py  content_generator.py  personas.py  progress_api.py  scheduler.py  sprint_manager.py  standup.py
ai_team_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: ai  fred  fred.py
config/: default.yaml  projects.yaml
dashboard/: __init__.py  app.py  requirements.txt
docs/: command-center-architecture.md  command-center-prd.md
elgringo/: __init__.py  launcher.py  orchestrator.py  orchestrator_agents.py  orchestrator_context.py  orchestrator_intelligence.py
elgringo/advanced/: __init__.py  vision.py
elgringo/agents/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py  grok.py  mlx_agent.py
elgringo/app_builder/: __init__.py  models.py
elgringo/apple/: __init__.py  apple_shortcuts.py  coreml_agent.py  mlx_inference.py  model_setup.py  smart_router.py  system_integration.py
elgringo/autonomous/: __init__.py  file_watcher.py  session_learner.py
elgringo/bootstrap/: generator.py
elgringo/business_suite/: chat_builder.py  integrations.py  models.py
elgringo/cli/: cli.py
elgringo/collaboration/: __init__.py  (+2 more)
examples/: README.md  basic_usage.py  demo.py  firebase_real_world.py  infrastructure_tools.py  multi_model_collaboration.py  security_validation.py  specialized_agents.py  workflow_automation.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
middleware/: __init__.py  analytics.py  analytics_api.py
mlx-training/: README.md  evaluation_results.json
products/: __init__.py  base.py  cli.py
projects/: artproof  chatterfix  dan  fixitfred  freddy-ide  gringoai  linesmart  parati  safetyfix
scripts/: setup.sh
servers/: api_server.py  main.py  mcp_server.py  start_mcp.sh
templates/: ceo_dashboard.html  registry.py
tests/: __init__.py  conftest.py  stress_test.py  test_agents.py  test_api_endpoints.py  test_collaboration.py  test_core_systems.py  test_fred_tools.py  test_fredfix.py  test_intelligence.py  test_mcp_handlers.py  test_mcp_server.py  test_memory_comprehensive.py  test_orchestrator.py  test_pr_review_bot.py  test_routing_advanced.py  test_security.py  test_validation_routing.py
tools/: install-hooks.sh
(+317 files in other folders)
