[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "el-gringo"
version = "1.0.0"
description = "El Gringo - Multi-Agent AI Orchestration Platform"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Fred Taylor"}
]
keywords = [
    "ai",
    "development",
    "claude",
    "chatgpt",
    "gemini",
    "grok",
    "orchestration",
    "collaboration",
    "platform",
    "multi-model",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.10.0",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
grok = ["openai>=1.50.0"]  # Grok uses OpenAI-compatible API
firestore = ["firebase-admin>=6.0.0"]
github = ["PyGithub>=2.0.0"]
flask = ["flask>=3.0.0", "flask-cors>=4.0.0"]
pr-bot = [
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "firebase-admin>=6.0.0",
    "PyGithub>=2.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
command-center = ["streamlit>=1.30.0"]
apple = [
    "ddgs>=8.0.0",
    "watchdog>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
fred = "ai_dev_team.cli:main"
fred-chat = "ai_dev_team.chat_ui:main"
fred-studio = "ai_dev_team.studio_ui:main"
fred-launch = "ai_dev_team.launcher:main"
fred-pr-bot = "products.pr_review_bot.server:main"

[project.urls]
Homepage = "https://github.com/TheGringo-ai/ElGringo"
Documentation = "https://github.com/TheGringo-ai/ElGringo#readme"
Repository = "https://github.com/TheGringo-ai/ElGringo"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_dev_team*", "products*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
ignore = ["E402", "E721"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
